p3/configs/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: playground-ingress
    labels:
        app: argocd
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - http:
            paths:
                - pathType: Prefix
                  path: "/"
                  backend:
                    service:
                        name: playground
                        port:
                            number: 8888
